Onepage-Layout einführen und Navigation anpassen
- Inhalte von „Über mich“, „Leistungen“ und „Kontakt“ in index.html zusammengeführt
- Navigation so umgestellt, dass Links auf #ueber-mich, #leistungen und #kontakt verweisen
- Separate Seite „AI4MBSE“ unverändert belassen und weiterhin unter /AI4MBSE/ erreichbar
- Alte Einzelseiten (about.md, leistungen.md, kontakt.md) entfernt
- CSS erweitert: section-Container, smooth-scrolling, responsive Breakpoints, abwechselnde Hintergründe

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,10 @@
 <nav>
   <ul>
-    {% for item in site.data.navigation.main %}
-      <li><a href="{{ item.url | relative_url }}">{{ item.title }}</a></li>
-    {% endfor %}
+    <li><a href="/">Startseite</a></li>
+    <li><a href="/#ueber-mich">Über mich</a></li>
+    <li><a href="/#leistungen">Leistungen</a></li>
+    <!-- Den Punkt AI4MBSE lassen wir raus, weil er eine eigene Seite bleiben soll -->
+    <li><a href="/AI4MBSE/">AI4MBSE</a></li>
+    <li><a href="/#kontakt">Kontakt</a></li>
   </ul>
 </nav>
