--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,7 @@
     <li><a href="/">Startseite</a></li>
     <li><a href="/#ueber-mich">Über mich</a></li>
     <li><a href="/#leistungen">Leistungen</a></li>
-    <!-- Den Punkt AI4MBSE lassen wir raus, weil er eine eigene Seite bleiben soll -->
-    <li><a href="/AI4MBSE/">AI4MBSE</a></li>
+    <li><a href="/ai4mbse/">AI4MBSE</a></li>
     <li><a href="/#kontakt">Kontakt</a></li>
   </ul>
 </nav>
