--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,6 @@
     <footer>
         {% include footer.html %}
     </footer>
+    <script src="/assets/js/main.js" defer></script>
 </body>
 </html>
