--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,14 @@
-<nav>
-  <ul>
-    <li><a href="/">Startseite</a></li>
-    <li><a href="/#ueber-mich">Über mich</a></li>
-    <li><a href="/#leistungen">Leistungen</a></li>
-    <li><a href="/ai4mbse/">AI4MBSE</a></li>
-    <li><a href="/#kontakt">Kontakt</a></li>
-  </ul>
-</nav>
+<header class="site-header">
+  <nav class="navbar">
+    <div class="container">
+      <a href="/" class="logo">Kingsepp</a>
+      <ul class="nav-menu">
+        <li><a href="/#hero">Startseite</a></li>
+        <li><a href="/#ueber-mich">Über mich</a></li>
+        <li><a href="/#leistungen">Leistungen</a></li>
+        <li><a href="/ai4mbse/">AI4MBSE</a></li>
+        <li><a href="/#kontakt">Kontakt</a></li>
+      </ul>
+    </div>
+  </nav>
+</header>
