--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,11 @@
-<footer class="site-footer">
-  <div class="container">
-    <p>© 2025 Kingsepp – Alle Rechte vorbehalten.</p>
-    <div class="social-icons">
-      <a href="https://github.com/Kingsepp" target="_blank"><i class="icon github-square"></i></a>
-      <a href="https://linkedin.com/in/Kingsepp" target="_blank"><i class="icon linkedin"></i></a>
-      <!-- Weitere Icons nach Bedarf -->
-    </div>
-  </div>
-</footer>
+    <!-- ============================
+         FOOTER
+         ============================ -->
+    <footer class="site-footer">
+      <div class="container">
+        <p>© 2025 Kingsepp – Alle Rechte vorbehalten.</p>
+        <div class="social-icons">
+          <!-- Weitere Icons nach Bedarf -->
+        </div>
+      </div>
+    </footer>
