--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
-<!-- header.html -->
 <header class="site-header">
   <nav class="navbar">
-    <div class="container">
-      <a href="/" class="logo">Kingsepp</a>
-      <ul class="nav-menu">
+    <div class="nav-container">
+      <a href="/" class="logo">{{ site.title }}</a>
+      <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">Über mich</a></li>
         <li><a href="#services">Services</a></li>
