--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
     <main>
         {{ content }}
     </main>
+    <!-- Footer -->
     {% include footer.html %}
+
+    <!-- Scripts -->
     <script src="{{ '/assets/js/main.js' | relative_url }}" defer></script>
 </body>
 </html>
