--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,5 @@
     <footer class="ai4mbse-footer-note" style="text-align:center; margin-top:2rem; font-size:1rem; color:#bfcbe6;">
       &copy; 2025 Kingsepp – Alle Rechte vorbehalten.<br>
       Hinweis: Diese Website ist ein rein privates, nicht-kommerzielles Informationsangebot.<br>
-      <a href="/impressum" style="color:var(--ai4mbse-link,
-      #1d0685);text-decoration:underline;">Impressum</a>
+      <a href="/impressum">Impressum</a>
     </footer>
